[package]
name = "raddy"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
boring = "4.22.0"
bytes = "1.11.1"
env_logger = "0.11.11"
futures-util = "0.3.32"
http = "1.4.2"
log = "0.4.33"
mimalloc = { version = "0.1.52", default-features = false }
pingora = { version = "0.8.1", default-features = false, features = ["proxy", "boringssl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "net", "rt", "sync", "time"] }
tokio-quiche = { version = "0.19.0", default-features = false }
url = "2.5.8"
regex = "1.12.4"


# ACME certificate management
instant-acme = "0.8.5"
arc-swap = "1.9.2"
rcgen = { version = "0.14.8", features = ["pem"] }
x509-parser = "0.18.1"
pem = "3.0.6"
chrono = { version = "0.4.45", features = ["serde"] }
serde_json = "1.0.150"
time = "0.3.51"
